--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f35bdbbcf50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd63a649c50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f35bd891190&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f35bd891390&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd63a91d390&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd63a91d590&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f35bde41ad0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f35bde41cd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd63aecfc90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd63aecfe90&gt;]</pre>
 </div>
 
 </div>
