--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd63a649c50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7184962050&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd63a91d390&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd63a91d590&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7184c55250&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7184c55450&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd63aecfc90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd63aecfe90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f71851f4c10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f71851f4e10&gt;]</pre>
 </div>
 
 </div>
