--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7f44b0ed90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fcb0b81f190&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7f44ab1390&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7f44ab1590&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fcb0b7c6210&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fcb0b7c6410&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7f45062c50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7f45062e50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fcb0bd76b50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fcb0bd76d50&gt;]</pre>
 </div>
 
 </div>
