--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3335597850&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5c4f848410&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f333586c290&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f333586c490&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5c4f517250&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5c4f517450&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3335e1eb90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3335e1ed90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5c4fac8b50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5c4fac8d50&gt;]</pre>
 </div>
 
 </div>
