--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7faf90c47590&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fdf68ac8610&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7faf9092b190&gt;,
- &lt;matplotlib.lines.Line2D at 0x7faf9092b390&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fdf687b1290&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fdf687b1490&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7faf90ec8b10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7faf90ec8d10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fdf68d60c10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fdf68d60e10&gt;]</pre>
 </div>
 
 </div>
