--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f562a62a3d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fdb91d8df10&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f562a655210&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f562a655410&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fdb91d36350&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fdb91d36550&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f562ac06a50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f562ac06c50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fdb922e1c90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fdb922e1e90&gt;]</pre>
 </div>
 
 </div>
