--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1a0289c210&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f19b8a11d50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1a02e700d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1a02e702d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f19b86b9f90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f19b86f61d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1a03422a50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1a03422c50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f19b8c8c8d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f19b8c8cad0&gt;]</pre>
 </div>
 
 </div>
