--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f19b8a11d50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f090bf9c410&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f19b86b9f90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f19b86f61d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f090c2d00d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f090c2d02d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f19b8c8c8d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f19b8c8cad0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f090c86c990&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f090c86cb90&gt;]</pre>
 </div>
 
 </div>
