--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5288bcbed0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6740368590&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5288ea71d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5288ea73d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f67406cf1d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f67406cf3d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5289454b10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5289454d10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6740cc7210&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6740c71cd0&gt;]</pre>
 </div>
 
 </div>
