--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fcb6fa07e90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f13771529d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fcb6fcfb0d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fcb6fcfb2d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1376e3a310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1376e3a510&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fcb70297990&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fcb70297b90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f13773e8bd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f13773e8dd0&gt;]</pre>
 </div>
 
 </div>
