--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd3e132cbd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ffb3a589f50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd3e100e050&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd3e100e250&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ffb3a541110&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ffb3a541310&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd3e15ac910&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd3e15acb10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ffb3aadfa90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ffb3aadfc90&gt;]</pre>
 </div>
 
 </div>
