--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8cf18b7d10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0284ab8090&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8cf1bbe050&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8cf1bbe250&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f028478f110&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f02847a9450&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8cf215b9d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8cf215bbd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0284d4c9d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0284d57d10&gt;]</pre>
 </div>
 
 </div>
