--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fbc8b31d4d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f147418bf10&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fbc8b2c0190&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fbc8b2c0390&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1473e6c3d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1473e6c5d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fbc8b873ad0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fbc8b873cd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f147440ecd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f147440eed0&gt;]</pre>
 </div>
 
 </div>
