--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f58c1897350&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7efc0c93b690&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f58c184f290&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f58c184f490&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7efc0c60e150&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7efc0c60e350&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f58c1e03ad0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f58c1e03cd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7efc0cbb9ad0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7efc0cbb9cd0&gt;]</pre>
 </div>
 
 </div>
