--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fdb004c7490&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7caf2ca850&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fdb004762d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fdb004764d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7caef6e310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7caef99450&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fdb00a27b10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fdb00a27d10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7caf531c50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7caf53bd90&gt;]</pre>
 </div>
 
 </div>
