--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f45617daad0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f19b8ed6d10&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f456178a190&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f456178a390&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f19b8bac150&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f19b8bac350&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4561d3da90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4561d3dc90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f19b915fa90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f19b915fc90&gt;]</pre>
 </div>
 
 </div>
