--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa190ca07d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd5a513e710&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa190f7c1d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa190f7c3d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd5a5702c50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd5a56fb310&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa19152cb10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa19152cd10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd5a5c8e590&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd5a5c99c10&gt;]</pre>
 </div>
 
 </div>
